# rps-rs

./: .editorconfig  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: CODEOWNERS  verification.yml
src/: gesture.rs  main.rs  player.rs  score.rs
