[package]
name = "rust-rps"
version = "0.1.0"
authors = ["Mervyn McCreight <mervyn.mccreight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
enum-ordinalize = "4.1.2"

[dev-dependencies]
test-case = "3.3.1"
